--- a/README.textile
+++ b/README.textile
@@ -24,6 +24,10 @@ Then in your specs:
         text :omg_omg_bio
         string :name
         string :favorite_scene
+        
+        def awesome?(show_name)
+          show_name == "Gilmore Girls"
+        end
       end
     end
     
@@ -33,15 +37,20 @@ Then in your specs:
       nerd.errors.on(:favorite_scene).should_not be_nil
     end
     
+    it "should think gilmore girls is awesome"
+      nerd = Nerd.new
+      nerd.awesome?("Gilmore Girls").should be_true
+    end
+    
     it "has other stuff" do
       # ETC!
     end
   end
   
 The @build_model@ method allows you to build an ActiveRecord on
-the fly. It takes a block where you can specify columns. The table
-will be created in in an in-memory sqlite3 database. If you need
-another adapter, this project ain't for you. Sorry.
+the fly. It takes a block where you can specify columns and methods.
+The table will be created in in an in-memory sqlite3 database. If
+you need another adapter, this project ain't for you. Sorry.
 
 TODO
 
